# robot_basic

./: .gitignore
BalancingRobot/stm32/balancing_robot_with_f3discovery/: .mxproject  balancing_robot_with_f3discovery.ioc
BalancingRobot/stm32/gyro_acc_sensor_with_f3discovery/: .mxproject  gyro_acc_sensor_with_f3discovery.ioc
FreeRTOS/Data_Transfer_With_QUEUE/Core/Src/: main.c
FreeRTOS/Semaphore_EX/: Semaphore_EX.ioc
FreeRTOS/Semaphore_EX/Core/Inc/: FreeRTOSConfig.h
FreeRTOS/Semaphore_EX/Core/Src/: main.c
FreeRTOS/Thread_Creation_Ex/: Thread_Creation_Ex.ioc
FreeRTOS/Thread_Creation_Ex/Core/Src/: main.c
FreeRTOS/Timer_EX/: .mxproject  Timer_EX.ioc
FreeRTOS/Timer_EX/Core/Inc/: stm32f3xx_it.h
FreeRTOS/Timer_EX/Core/Src/: main.c
Ros1/MCL/: 03_motion_sensing  03_motion_sensing.cpp  04_motion_sensing_ex  04_motion_sensing_ex.cpp  05_noise  05_noise.cpp  06_1_generating_particles  06_1_generating_particles.cpp  06_2_simulating_motion  06_2_simulating_motion.cpp  07_Importance_weight  07_Importance_weight.cpp  08_Resampling  08_Resampling.cpp  09_Resampling_wheel  09_Resampling_wheel.cpp
Ros1/MCL/03_motion_sensing.dSYM/Contents/: Info.plist
Ros1/MCL/04_motion_sensing_ex.dSYM/Contents/: Info.plist
Ros1/MCL/05_noise.dSYM/Contents/: Info.plist
Ros1/MCL/06_1_generating_particles.dSYM/Contents/: Info.plist
Ros1/catkin_ws/: .pgm  .yaml  map.pgm  map.yaml
Ros1/catkin_ws/ls/: CTestConfiguration.ini  catkin_make.cache
Ros2/: README.md
Ros2/ros2_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
Ros2/ros2_ws/launch/: launch_all.py
Ros2/ros2_ws/log/: latest_build
Ros2/ros2_ws/src/action_tutorials_cpp/: CMakeLists.txt
Ros2/ros2_ws/src/action_tutorials_interfaces/: package.xml
Ros2/ros2_ws/src/cpp_pubsub/: CMakeLists.txt
Ros2/ros2_ws/src/cpp_srvcli/: package.xml
Ros2/ros2_ws/src/gyro_acc_interfaces/: CMakeLists.txt  package.xml
Ros2/ros2_ws/src/gyro_acc_pub/: CMakeLists.txt  (+1 more)
Ros2/ros2_ws/src/my_robot_description/: CMakeLists.txt  package.xml
Ros2/ros2_ws/src/my_robot_description/launch/: robot_model.launch.py
Ros2/ros2_ws/src/my_robot_description/rviz/: testbot_edu.rviz
Ros2/ros2_ws/src/my_robot_description/urdf/: testbot_edu.urdf
Ros2/ros2_ws/src/ros2_test_1/: CMakeLists.txt  package.xml
Ros2/ros2_ws/src/ros2_test_1/launch/: robot_model.launch.py
Ros2/ros2_ws/src/ros2_test_1/rviz/: testbot_edu.rviz
Serial/UART/raspberrypi/: README.md  index.js  package-lock.json  package.json
stm32/.metadata/: .log4j2.xml  version.ini
(+104 files in other folders)
