<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_test_1</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="kyw@todo.todo">kyw</maintainer>
  <license>Apcahe-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <depend>launch_ros</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
